--- a/source/_assets/css/site.css
+++ b/source/_assets/css/site.css
@@ -5,7 +5,7 @@
     position: relative;
     width:500px;
     height:750px;
-    background-image: url('/assets/img/card-back.png');
+    background-image: url('/assets/img/card-black.png');
     background-repeat: no-repeat;
     background-position: center center;
 
@@ -20,6 +20,9 @@
         margin:auto;
         z-index:3;
         border-radius: 50px;
+        overflow:hidden;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     .front {
@@ -67,4 +70,8 @@
             color:#FFF;
         }
     }
+}
+
+#progress-bar {
+    transition: 0.2s all;
 }
