--- a/source/_assets/css/site.css
+++ b/source/_assets/css/site.css
@@ -10,8 +10,8 @@
     background-position: center center;
 
     .photo {
-        width:482px;
-        height:738px;
+        width:460px;
+        height:700px;
         position: absolute;
         top:0;
         left:0;
@@ -51,11 +51,14 @@
 
         .card-button-wrapper {
             width:300px;
+            height:125px;
             position: absolute;
             bottom:140px;
             left:102px;
             display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
 
         .done-button {
