--- a/source/_assets/css/site.css
+++ b/source/_assets/css/site.css
@@ -1,4 +1,32 @@
 
+.card-wrapper {
+    position: relative;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-align: center;
+    transition: 0.2s all;
+
+    @media all and (max-width:760px) {
+        position: absolute;
+        width:500px;
+        height:750px;
+        top:0;
+        left:0;
+        right:0;
+        bottom:0;
+        margin:auto;
+        transform:scale(0.80);
+    }
+
+    @media all and (max-width:490px) {
+        padding-top:0;
+        transform:scale(0.60);
+        left:-5%;
+        padding-bottom: 0;
+    }
+}
 
 .card {
     margin:0 auto;
