--- a/source/_assets/css/site.css
+++ b/source/_assets/css/site.css
@@ -7,6 +7,7 @@
     height:100%;
     text-align: center;
     transition: 0.2s all;
+    transform-origin: center;
 
     @media all and (max-width:760px) {
         position: absolute;
