--- a/source/_assets/css/site.css
+++ b/source/_assets/css/site.css
@@ -5,7 +5,9 @@
     left:0;
     width:100%;
     height:100%;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transition: 0.2s all;
     transform-origin: center;
 
@@ -23,8 +25,9 @@
 
     @media all and (max-width:490px) {
         padding-top:0;
+        margin-top:80px;
         transform:scale(0.60);
-        left:-5%;
+        left:-6%;
         padding-bottom: 0;
     }
 }
@@ -106,4 +109,57 @@
 
 #progress-bar {
     transition: 0.2s all;
+}
+
+#reward-screen {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height:100%;
+    background: rgb(255,0,240);
+    background: linear-gradient(180deg, rgba(255,0,240,0.85) 0%, rgba(140,78,255,0.85) 100%);
+    color:#FFF;
+    z-index:45;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h1, h2, h3, h4, h5, h6, p {
+        color: #FFF;
+    }
+}
+
+#pack-screen {
+    position: absolute;
+    top: 0;
+    left:0;
+    right:0;
+    bottom:0;
+    width:100%;
+    height:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index:35;
+    transform: scale(1.2);
+    cursor:pointer;
+
+    @media all and (max-width:760px) {
+        transform:scale(1.0);
+    }
+
+    @media all and (max-width:490px) {
+        margin-top:80px;
+        align-items: flex-start;
+        transform:scale(0.8);
+    }
+}
+
+body {
+    overflow:hidden;
 }
