--- a/source/_assets/css/site.css
+++ b/source/_assets/css/site.css
@@ -25,9 +25,9 @@
 
     @media all and (max-width:490px) {
         padding-top:0;
-        margin-top:80px;
+        margin-top:40px;
         transform:scale(0.60);
-        left:-6%;
+        left:-13.5%;
         padding-bottom: 0;
     }
 }
@@ -132,6 +132,10 @@
     h1, h2, h3, h4, h5, h6, p {
         color: #FFF;
     }
+
+    img {
+        max-width:80%;
+    }
 }
 
 #pack-screen {
@@ -154,9 +158,9 @@
     }
 
     @media all and (max-width:490px) {
-        margin-top:80px;
+        margin-top:100px;
         align-items: flex-start;
-        transform:scale(0.8);
+        transform:scale(0.85);
     }
 }
 
