--- a/source/_assets/css/site.css
+++ b/source/_assets/css/site.css
@@ -11,39 +11,44 @@
     transition: 0.2s all;
     transform-origin: center;
 
-    @media all and (max-width:760px) {
-        position: absolute;
-        width:500px;
-        height:750px;
-        top:0;
-        left:0;
-        right:0;
-        bottom:0;
-        margin:auto;
-        transform:scale(0.80);
-    }
+    /*@media all and (max-width:760px) {*/
+    /*    position: absolute;*/
+    /*    width:500px;*/
+    /*    height:750px;*/
+    /*    top:0;*/
+    /*    left:0;*/
+    /*    right:0;*/
+    /*    bottom:0;*/
+    /*    margin:auto;*/
+    /*    transform:scale(0.80);*/
+    /*}*/
 
-    @media all and (max-width:490px) {
-        padding-top:0;
-        margin-top:40px;
-        transform:scale(0.60);
-        left:-13.5%;
-        padding-bottom: 0;
-    }
+    /*@media all and (max-width:490px) {*/
+    /*    padding-top:0;*/
+    /*    margin-top:40px;*/
+    /*    transform:scale(0.60);*/
+    /*    left:-13.5%;*/
+    /*    padding-bottom: 0;*/
+    /*}*/
 }
 
 .card {
-    margin:0 auto;
+    margin:20px auto;
     position: relative;
-    width:500px;
-    height:750px;
+    width:250px;
+    height:375px;
     background-image: url('/assets/img/card-black.png');
     background-repeat: no-repeat;
     background-position: center center;
+    background-size:contain;
+
+    @media all and (max-width:490px) {
+        margin-top:80px;
+    }
 
     .photo {
-        width:460px;
-        height:700px;
+        width:230px;
+        height:350px;
         position: absolute;
         top:0;
         left:0;
@@ -64,29 +69,31 @@
         right:0;
         bottom:0;
         margin:auto;
-        width:500px;
-        height:750px;
+        width:250px;
+        height:375px;
         background-image: url('/assets/img/card-front.png');
         background-repeat: no-repeat;
         background-position: center center;
+        background-size:contain;
         z-index:4;
 
         #card-title {
             text-transform: uppercase;
             text-align: center;
-            width: 280px;
+            width: 100%;
             position: absolute;
-            top: 95px;
-            left: 125px;
+            top: 45px;
             color: #FFF;
+            padding-left:18px;
+            font-size:12px;
         }
 
         .card-button-wrapper {
-            width:300px;
-            height:125px;
+            width:150px;
+            height:63px;
             position: absolute;
-            bottom:140px;
-            left:102px;
+            bottom:70px;
+            left:51px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -94,14 +101,15 @@
         }
 
         .done-button {
+            font-size: 10px;
             position: absolute;
             width:150px;
             height:50px;
             display: flex;
             align-items: center;
             justify-content: center;
-            bottom: 30px;
-            left: 175px;
+            bottom: 3px;
+            left: 51px;
             color:#FFF;
         }
     }
@@ -146,21 +154,15 @@
     bottom:0;
     width:100%;
     height:100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     z-index:35;
-    transform: scale(1.2);
     cursor:pointer;
 
-    @media all and (max-width:760px) {
-        transform:scale(1.0);
-    }
-
-    @media all and (max-width:490px) {
-        margin-top:100px;
-        align-items: flex-start;
-        transform:scale(0.85);
+    img {
+        position: relative;
+        margin:60px auto;
+        width:300px;
+        height:425px;
     }
 }
 
